# fly-like-a-bird

./: .gitignore  LICENSE  README.md  metrics.csv  pyproject.toml  requirements.txt
flight-prediction-app/data/processed/: regression_atl_cleaned.parquet
flight-prediction-app/model/: flight_status_prediction.py
flight_status_prediction/app/: README.md
flight_status_prediction/model/: flight_status_prediction.py  flight_sweeper.py  requirements.txt
fp_app/data/flight-prediction-app/: prepare_data.py
fp_app/data/flight-prediction-app/app/: README.md
fp_app/data/flight-prediction-app/model/: flight-status-prediction.ipynb  outputs.txt
mining_flight_patterns/: Makefile  __init__.py  features.py  plots.py  proposal.txt  pyproject.toml
mining_flight_patterns/dm_sr_project/: dataset.py
mining_flight_patterns/dm_sr_project/modeling/: train.py
mining_flight_patterns/docs/: mkdocs.yml
mining_flight_patterns/docs/docs/: index.md
mining_flight_patterns/fp_app/: app.py  app_requirements.txt
mining_flight_patterns/modeling/: predict.py
notebooks/: data_cleaning.py
wandb/: settings
