[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "flight_status_prediction"
version = "0.0.1"
description = "GSU Data Mining Senior Project - Mining Projects from Large-Scale Flight Data: Feature Engineering \u0026 Classification for Delay Prediction aHartsfield-Jackson Atlanta Airport"
authors = [
  { name = "Yuntian Wu, Joshua Pi\u00f1a" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["flight_status_prediction"]
include = ["pyproject.toml", "flight_status_prediction/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["flight_status_prediction"]
force-sort-within-sections = true

